# test-actions

./: Cargo.toml  README.md
.github/workflows/: nightly.yml  release.yml  rust.yml
.github/workflows/deployment/nightly/freebsd/: action.yml
.github/workflows/deployment/nightly/linux/: action.yml
.github/workflows/deployment/nightly/macos/: action.yml
.github/workflows/deployment/nightly/windows/: action.yml
.github/workflows/deployment/release/: linux.yml  macos.yml  windows.yml
.github/workflows/deployment/release/freebsd/: action.yml
.github/workflows/deployment/release/linux/: action.yml
.github/workflows/deployment/release/macos/: action.yml
.github/workflows/deployment/release/windows/: action.yml
src/: database.rs  main.rs  routes.rs
src/blog/: auth.rs
src/models/: auth.rs
