[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "*"
salvo = { version= "*", features = ["cors", "jwt-auth"]}
serde = { version = "*", features = ["derive"]}
surrealdb = "1.0.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
